Fix code wrapping in li

--- a/apps/docs/styles/main.scss
+++ b/apps/docs/styles/main.scss
@@ -190,6 +190,7 @@ pre[class*='language-'] {
 h2 code,
 h3 code,
 h4 code,
+li code,
 p code {
   word-break: keep-all !important;
   white-space: nowrap !important;
